// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfosGenerales /> should render 1`] = `
<div>
  <form>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Quel est le type du contrat de travail ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        class="sc-f2c30c13-2 bKCzpJ"
        data-testid="contractType-cdd"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-cdd"
      >
        Contrat à durée déterminée (CDD)
      </label>
    </div>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        class="sc-f2c30c13-2 bKCzpJ"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-ci"
      >
        Contrat de travail temporaire (Contrat d’intérim)
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD 1`] = `
<div>
  <form>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Quel est le type du contrat de travail ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        checked=""
        class="sc-f2c30c13-2 bKCzpJ"
        data-testid="contractType-cdd"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-cdd"
      >
        Contrat à durée déterminée (CDD)
      </label>
    </div>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        class="sc-f2c30c13-2 bKCzpJ"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-ci"
      >
        Contrat de travail temporaire (Contrat d’intérim)
      </label>
    </div>
    <div
      class="sc-bcc8e06a-2 jPdZuK"
    >
      <legend
        class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
        data-testid="question-label"
        for="input-criteria.cddType"
      >
        <span
          class="sc-3633cc97-0 eiVtrx"
        >
          Quel est le type de CDD ?
          <span
            class="sc-3633cc97-0 hpZWjW"
          >
             (obligatoire)
          </span>
        </span>
      </legend>
      <div
        class="sc-5a2c6b8f-0 yOEut sc-bcc8e06a-1 lhvsEJ"
      >
        <select
          class="sc-5a2c6b8f-2 leEqvE"
          data-testid="criteria.cddType"
          id="input-criteria.cddType"
          name="criteria.cddType"
        >
          <option
            disabled=""
            value=""
          >
            ...
          </option>
          <option
            data-testid="CDD saisonnier"
            value="CDD saisonnier"
          >
            CDD saisonnier
          </option>
          <option
            data-testid="CDD d'usage"
            value="CDD d'usage"
          >
            CDD d'usage
          </option>
          <option
            data-testid="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
            value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
          >
            CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
          </option>
          <option
            data-testid="CCD dans le cadre d’un congé de mobilité"
            value="CCD dans le cadre d’un congé de mobilité"
          >
            CCD dans le cadre d’un congé de mobilité
          </option>
          <option
            data-testid="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
            value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
          >
            Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
          </option>
          <option
            data-testid="Contrat de professionnalisation ou Contrat d’apprentissage"
            value="Contrat de professionnalisation ou Contrat d’apprentissage"
          >
            Contrat de professionnalisation ou Contrat d’apprentissage
          </option>
          <option
            data-testid="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
            value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
          >
            Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
          </option>
          <option
            data-testid="Autres"
            value="Autres"
          >
            Autres
          </option>
        </select>
        <div
          aria-hidden="true"
          class="sc-5a2c6b8f-1 dTDGVJ"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#arrow-down_svg__a)"
            >
              <path
                d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__a"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD and not handled ccn 1`] = `
<div>
  <form>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Quel est le type du contrat de travail ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        checked=""
        class="sc-f2c30c13-2 bKCzpJ"
        data-testid="contractType-cdd"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-cdd"
      >
        Contrat à durée déterminée (CDD)
      </label>
    </div>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        class="sc-f2c30c13-2 bKCzpJ"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-ci"
      >
        Contrat de travail temporaire (Contrat d’intérim)
      </label>
    </div>
    <div
      class="sc-bcc8e06a-2 jPdZuK"
    >
      <legend
        class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
        data-testid="question-label"
        for="input-criteria.cddType"
      >
        <span
          class="sc-3633cc97-0 eiVtrx"
        >
          Quel est le type de CDD ?
          <span
            class="sc-3633cc97-0 hpZWjW"
          >
             (obligatoire)
          </span>
        </span>
      </legend>
      <div
        class="sc-5a2c6b8f-0 yOEut sc-bcc8e06a-1 lhvsEJ"
      >
        <select
          class="sc-5a2c6b8f-2 leEqvE"
          data-testid="criteria.cddType"
          id="input-criteria.cddType"
          name="criteria.cddType"
        >
          <option
            disabled=""
            value=""
          >
            ...
          </option>
          <option
            data-testid="CDD saisonnier"
            value="CDD saisonnier"
          >
            CDD saisonnier
          </option>
          <option
            data-testid="CDD d'usage"
            value="CDD d'usage"
          >
            CDD d'usage
          </option>
          <option
            data-testid="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
            value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
          >
            CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
          </option>
          <option
            data-testid="CCD dans le cadre d’un congé de mobilité"
            value="CCD dans le cadre d’un congé de mobilité"
          >
            CCD dans le cadre d’un congé de mobilité
          </option>
          <option
            data-testid="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
            value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
          >
            Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
          </option>
          <option
            data-testid="Contrat de professionnalisation ou Contrat d’apprentissage"
            value="Contrat de professionnalisation ou Contrat d’apprentissage"
          >
            Contrat de professionnalisation ou Contrat d’apprentissage
          </option>
          <option
            data-testid="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
            value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
          >
            Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
          </option>
          <option
            data-testid="Autres"
            value="Autres"
          >
            Autres
          </option>
        </select>
        <div
          aria-hidden="true"
          class="sc-5a2c6b8f-1 dTDGVJ"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#arrow-down_svg__a)"
            >
              <path
                d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__a"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CTT 1`] = `
<div>
  <form>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Quel est le type du contrat de travail ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        class="sc-f2c30c13-2 bKCzpJ"
        data-testid="contractType-cdd"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-cdd"
      >
        Contrat à durée déterminée (CDD)
      </label>
    </div>
    <div
      class="sc-f2c30c13-1 cRwNeF"
    >
      <input
        checked=""
        class="sc-f2c30c13-2 bKCzpJ"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      <label
        class="sc-f2c30c13-0 ebobyG"
        for="contractType-ci"
      >
        Contrat de travail temporaire (Contrat d’intérim)
      </label>
    </div>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        S’agit-il d’un contrat de mission-formation ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-967f95b8-1 DCwXK"
      data-testid="cttFormation"
    >
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="cttFormation-oui"
          id="cttFormation-oui"
          name="cttFormation"
          type="radio"
          value="true"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="cttFormation-oui"
        >
          Oui
        </label>
      </div>
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="cttFormation-non"
          id="cttFormation-non"
          name="cttFormation"
          type="radio"
          value="false"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="cttFormation-non"
        >
          Non
        </label>
      </div>
    </div>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Le contrat d'intérim a-t-il été rompu avant la fin prévue pour une des raisons suivantes : la propre initiative du salarié, la faute grave du salarié, cas de force majeure ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-967f95b8-1 DCwXK"
      data-testid="ruptureContratFauteGrave"
    >
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="ruptureContratFauteGrave-oui"
          id="ruptureContratFauteGrave-oui"
          name="ruptureContratFauteGrave"
          type="radio"
          value="true"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="ruptureContratFauteGrave-oui"
        >
          Oui
        </label>
      </div>
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="ruptureContratFauteGrave-non"
          id="ruptureContratFauteGrave-non"
          name="ruptureContratFauteGrave"
          type="radio"
          value="false"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="ruptureContratFauteGrave-non"
        >
          Non
        </label>
      </div>
    </div>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        À la fin du contrat d'intérim, le salarié a-t-il été immédiatement embauché en CDI au sein de l'entreprise dans laquelle il effectuait sa mission ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-967f95b8-1 DCwXK"
      data-testid="propositionCDIFinContrat"
    >
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="propositionCDIFinContrat-oui"
          id="propositionCDIFinContrat-oui"
          name="propositionCDIFinContrat"
          type="radio"
          value="true"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="propositionCDIFinContrat-oui"
        >
          Oui
        </label>
      </div>
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="propositionCDIFinContrat-non"
          id="propositionCDIFinContrat-non"
          name="propositionCDIFinContrat"
          type="radio"
          value="false"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="propositionCDIFinContrat-non"
        >
          Non
        </label>
      </div>
    </div>
    <legend
      class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
      data-testid="question-label"
    >
      <span
        class="sc-3633cc97-0 eiVtrx"
      >
        Le salarié a-t-il refusé la mise en œuvre de la souplesse prévue dans le contrat d’intérim ?
        <span
          class="sc-3633cc97-0 hpZWjW"
        >
           (obligatoire)
        </span>
      </span>
    </legend>
    <div
      class="sc-967f95b8-1 DCwXK"
      data-testid="refusSouplesse"
    >
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="refusSouplesse-oui"
          id="refusSouplesse-oui"
          name="refusSouplesse"
          type="radio"
          value="true"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="refusSouplesse-oui"
        >
          Oui
        </label>
      </div>
      <div
        class="sc-f2c30c13-1 cRwNeF"
      >
        <input
          class="sc-f2c30c13-2 bKCzpJ"
          data-testid="refusSouplesse-non"
          id="refusSouplesse-non"
          name="refusSouplesse"
          type="radio"
          value="false"
        />
        <label
          class="sc-f2c30c13-0 ebobyG"
          for="refusSouplesse-non"
        >
          Non
        </label>
      </div>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
